--- a/honeycomb/client/package.json
+++ b/honeycomb/client/package.json
@@ -11,7 +11,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-tsparticles": "^2.1.0",
+    "styled-components": "^5.3.5",
+    "tsparticles": "^2.1.0",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
